# clear_stm32_project

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
